﻿PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 201?, PHP 5.3.99
- Upgraded bundled sqlite to version 3.6.23.1. (Ilia)
- Upgraded bundled PCRE to version 8.10. (Ilia)

- Added caches to eliminate repeatable run-time bindings of functions, classes,
  constants, methods and properties (Dmitry)
- Added a number of small performance tweaks and optimizations (Dmitry)
  . ZEND_RECV now always has IS_CV as its result
  . ZEND_CATCH now has to be used only with constant class names
  . ZEND_FETCH_DIM_? may fetch array and dimension operans in a different order
  . ZEND_RETURN is splitted into two new instructions ZEND_RETURN and 
    ZEND_RETURN_BY_REF
  . optimized access to global constants using values with pre-calculated
    hash_values from literals table
  . optimized access to static properties using executor specialization.
    A constant class name may be used as a direct operand of ZEND_FETCH_*
    instruction without previous ZEND_FETCH_CLASS.
  . eliminated unnecessary iterations during request startup/shutdown
  . zend_stack and zend_ptr_stack allocation is delayed before the actual usage
  . $GLOBALS became a JIT autoglobal, so it's initialized only if used
    (this may affect opcode caches)
  . simplified string ofset reading. $str[1][0] now is a legal construct.
  . ZEND_FETCH_*_R operations simplified and can't be used with EXT_TYPE_UNUSED
    flag any more. Thit is very rare and useless case. ZEND_FREE might be
    required after them instead.
  . improved performance of FastCGI request parsing
  . improved performance of @ (silence) operator
- Added concept of interned strings. All strings constants known at compile
  time are allocated in a single copy and never changed. (Dmitry)
- Added an optimization which saves memory and emalloc/efree calls for empty
  HashTables (Stas, Dmitry)

- Added support for Traits. (Stefan)